# hollowdb-prover-rust

./: .editorconfig  .gitignore  Cargo.toml  README.md  package.json
circuits/: hollow-authz.r1cs  hollow-authz.wasm  proverkey.zkey  verification_key.json
src/: circom.rs  lib.rs  prover.rs  utils.rs  verifier.rs
