[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ark-bn254 = "0.4.0"
ark-circom = { git = "https://github.com/gakonst/ark-circom.git", features = [
    "circom-2"
] }
ark-groth16 = "0.4.0"
ark-relations = "0.4.0"
ark-snark = "0.4.0"
ark-std = "0.4.0"
num-bigint = "0.4.3"
