[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ark-bn254 = "0.4.0"
ark-circom = { git = "https://github.com/gakonst/ark-circom.git", features = [
    "circom-2"
] }
ark-groth16 = "0.4.0"
ark-relations = "0.4.0"
ark-snark = "0.4.0"
ark-std = "0.4.0"
num-bigint = "0.4.3"
poseidon-rs = "0.0.10"
# added for compute_key, Poseidon Fr::from_str
ff = {package="ff_ce" , version="0.11", features = ["derive"]}

# added for hash_to_group
serde_json = "1.0"
serde = "1.0.183"
color-eyre = "0.6.2"
ripemd = "0.1.3"
serde-hex = "0.1.0"
